--- a/conf1/nifi.properties
+++ b/conf1/nifi.properties
@@ -128,7 +128,7 @@ nifi.status.repository.questdb.persist.component.days=3
 nifi.status.repository.questdb.persist.location=./status_repository
 
 # Site to Site properties
-nifi.remote.input.host=c9fc6900b7e1
+nifi.remote.input.host=651641dec6e5
 nifi.remote.input.secure=false
 nifi.remote.input.socket.port=10000
 nifi.remote.input.http.enabled=true
@@ -142,7 +142,7 @@ nifi.remote.contents.cache.expiration=30 secs
 # Be aware that changing these properties may affect how your instance can be accessed without any restriction.
 # We recommend configuring HTTPS instead. The administrators guide provides instructions on how to do this.
 
-nifi.web.http.host=c9fc6900b7e1
+nifi.web.http.host=651641dec6e5
 nifi.web.http.port=8080
 nifi.web.http.network.interface.default=
 
@@ -260,7 +260,7 @@ nifi.cluster.protocol.is.secure=false
 
 # cluster node properties (only configure for cluster nodes) #
 nifi.cluster.is.node=true
-nifi.cluster.node.address=c9fc6900b7e1
+nifi.cluster.node.address=651641dec6e5
 nifi.cluster.node.protocol.port=8082
 nifi.cluster.node.protocol.max.threads=50
 nifi.cluster.node.event.history.size=25
@@ -374,3 +374,4 @@ nifi.performance.tracking.percentage=0
 # Example NiFi Registry NAR Provider:
 #   nifi.nar.library.provider.nifi-registry.implementation=org.apache.nifi.registry.extension.NiFiRegistryNarProvider
 #   nifi.nar.library.provider.nifi-registry.url=http://localhost:18080
+nifi.run.as=nifi
