--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - "${NIFI_PORT_HTTPS}:8443"
     environment:
       NIFI_WEB_HTTP_PORT: 8080
-      NIFI_CLUSTER_IS_NODE: 'true'
+      NIFI_CLUSTER_IS_NODE: 'false'
       NIFI_CLUSTER_NODE_PROTOCOL_PORT: 8082
       NIFI_CLUSTER_NODE_ADDRESS: nifi-node1
       NIFI_ZK_CONNECT_STRING: 'zookeeper:2181'
