--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     container_name: nifi-node1
     ports:
       - "${NIFI_PORT_HTTP}:8080"
-      - "${NIFI_PORT_HTTPS}:8443"
+      # - "${NIFI_PORT_HTTPS}:8443"
     environment:
       NIFI_WEB_HTTP_PORT: 8080
       NIFI_CLUSTER_IS_NODE: 'false'
