updated script and pipeline

--- a/conf1/bootstrap.conf
+++ b/conf1/bootstrap.conf
@@ -19,7 +19,7 @@
 java=java
 
 # Username to use when running NiFi. This value will be ignored on Windows.
-run.as=
+# run.as=nifi
 
 # Preserve shell environment while runnning as "run.as" user
 preserve.environment=false
