--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,6 @@ services:
     container_name: nifi-node1
     ports:
       - "${NIFI_PORT_HTTP}:8080"
-      # - "${NIFI_PORT_HTTPS}:8443"
     environment:
       NIFI_WEB_HTTP_PORT: 8080
       NIFI_CLUSTER_IS_NODE: 'false'
@@ -21,35 +20,16 @@ services:
       NIFI_ZK_CONNECT_STRING: 'zookeeper:2181'
       NIFI_ELECTION_MAX_WAIT: '1 min'
       NIFI_SENSITIVE_PROPS_KEY: 'MySuperSecretKey123'
+      INPUT_FOLDER: ${INPUT_FOLDER}
+      OUTPUT_FOLDER: ${OUTPUT_FOLDER}
+      SCRIPTS_FOLDER: ${SCRIPTS_FOLDER}
+      KAFKA_BROKER: ${KAFKA_BROKER}
     volumes:
       - ${INPUT_FOLDER}:${INPUT_FOLDER}
       - ${OUTPUT_FOLDER}:${OUTPUT_FOLDER}
       - ${LOGS_FOLDER}/node1:/opt/nifi/nifi-current/logs
-      - ./scripts:/opt/nifi/custom-scripts
+      - ${SCRIPTS_FOLDER}:${SCRIPTS_FOLDER}
       - ./conf1:/opt/nifi/nifi-current/conf
     depends_on:
       - zookeeper
 
-  # nifi-node2:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile
-  #   container_name: nifi-node2
-  #   ports:
-  #     - "8082:8080" # Updated external port
-  #   environment:
-  #     NIFI_WEB_HTTP_PORT: 8080 # Updated internal port
-  #     NIFI_CLUSTER_IS_NODE: 'true'
-  #     NIFI_CLUSTER_NODE_PROTOCOL_PORT: 8083
-  #     NIFI_CLUSTER_NODE_ADDRESS: nifi-node2
-  #     NIFI_ZK_CONNECT_STRING: 'zookeeper:2181'
-  #     NIFI_ELECTION_MAX_WAIT: '1 min'
-  #     NIFI_SENSITIVE_PROPS_KEY: 'MySuperSecretKey123'
-  #   volumes:
-  #     - ${INPUT_FOLDER}:/opt/nifi/nifi-current/input
-  #     - ${OUTPUT_FOLDER}:/opt/nifi/nifi-current/output
-  #     - ${LOGS_FOLDER}/node2:/opt/nifi/nifi-current/logs
-  #     - ./scripts:/opt/nifi/custom-scripts
-  #     - ./conf2:/opt/nifi/nifi-current/conf
-  #   depends_on:
-  #     - zookeeper
